# extended-mind-tetris

./: .gitignore  CLAUDE.md  README.md  essay_spec.md  pyproject.toml  spec.md  summary.md
src/epistemic_arcade/: __init__.py
src/epistemic_arcade/agents/: __init__.py  evaluate.py  train.py  train_continuous.py
src/epistemic_arcade/io/: __init__.py  telemetry.py
src/epistemic_arcade/utils/: __init__.py  rotations.py
tests/: test_env.py  test_reward_wrapper.py  test_state_space.py  test_telemetry_wrapper.py
web/: README.md  app.js  index.html  styles.css
web/data/: telemetry_alpha.json  telemetry_beta.json
